; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_include.c_test_config_include__absolute.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_include.c_test_config_include__absolute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buf = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"[include]\0Apath = %s/config-included\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"config\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"config-include-absolute\00", align 1
@cfg = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [12 x i8] c"foo.bar.baz\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"huzzah\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_include__absolute() #0 {
  %1 = call i32 @cl_fixture(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %2 = call i32 @git_buf_printf(i32* @buf, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %1)
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = call i32 @git_buf_cstr(i32* @buf)
  %5 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0), i32 %4)
  %6 = call i32 @git_buf_dispose(i32* @buf)
  %7 = call i32 @git_config_open_ondisk(i32* @cfg, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @cfg, align 4
  %10 = call i32 @git_config_get_string_buf(i32* @buf, i32 %9, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0))
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = call i32 @git_buf_cstr(i32* @buf)
  %13 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i32 %12)
  %14 = call i32 @p_unlink(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0))
  %15 = call i32 @cl_git_pass(i32 %14)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_buf_printf(i32*, i8*, i32) #1

declare dso_local i32 @cl_fixture(i8*) #1

declare dso_local i32 @cl_git_mkfile(i8*, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1

declare dso_local i32 @git_config_open_ondisk(i32*, i8*) #1

declare dso_local i32 @git_config_get_string_buf(i32*, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @p_unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
